test/fail_compilation/either.nt
module either;

macro import neat.macros.assert;

 void main() {
     (string | int) e = "foo";
     assert(e.case(float f: 1) == 1);
 }
